--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220521232115">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220522033609">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,11 +25,11 @@
 					</div>
 					<div class="header__info header__info_first">
 						<div class="header__heading _icon-location">Адрес</div>
-						<div class="header__text">г. Коломна, ул. Октябрьской революции д. 161</div>
+						<div class="header__text">г. Казань, ул. РЕволюционной революции д. 161</div>
 					</div>
 					<div class="header__info header__info_two">
 						<div class="header__heading _icon-clock">Время работы</div>
-						<div class="header__text">Работаем без выходных с 9:00 до 21:00</div>
+						<div class="header__text">Работаем без выходных с 9:00 до 22:00</div>
 					</div>
 				</div>
 				<div class="header__contacts">
@@ -42,15 +42,29 @@
 						</a>
 					</div>
 					<div class="header__telephons">
-						<a href="tel:74966141515" class="header__tel">+7 (496) 614-15-15</a>
-						<a href="tel:79260255767" class="header__tel">+7 (926) 025-57-67</a>
+						<a href="tel:99999999999" class="header__tel">+7 (499) 999-15-99</a>
+						<a href="tel:99999999999" class="header__tel">+7 (999) 999-57-99</a>
 						<button type="button" class="header__btn">Перезвоните мне</button>
 					</div>
 				</div>
+				<a href="" class="header__burger">
+					<img src="img/header/burger.svg" alt="">
+				</a>
 			</div>
 		</header>
-		<main class="page">
 
+		<main class="page">
+			<section class="main -ibg">
+				<div class="main__container">
+					<h1 class="main__title">Лечение и протезирование зубов по Европейским стандартам</h1>
+					<div class="main__body">
+						<div class="main__subtitle">Предоставим 2-3 плана качественного лечения под ваш бюджет</div>
+						<div class="main__text">Запишитесь на <span>бесплатную</span> первичную консультацию - диагностику зубов</div>
+						<button type="button" class="main__button button">Записаться</button>
+					</div>
+				</div>
+				<picture><source srcset="img/page/main/bg.webp" type="image/webp"><img class="main__bg" src="img/page/main/bg.jpg" alt="bg"></picture>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -67,7 +81,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220521232115"></script>
+	<script src="js/app.min.js?_v=20220522033609"></script>
 </body>
 
 </html>
